--- a/about_us.html
+++ b/about_us.html
@@ -82,37 +82,43 @@
         <div class="row is-odd">
             <div class="col-lg-6 data">
                 <div class="header">
-                    <h2 class="header-title header-title--section"><span>Szkolenia otwarte</span></h2>
+                    <h2 class="header-title header-title--section"><a href="#"><span>Szkolenia otwarte</span></a></h2>
                 </div>
                 <p>Oferujemy dobrze zdefiniowane i zwarte formy szkoleniowe obejmujące swoją tematyką szeroko rozumiane <b>zagadnienia finansowe i podatkowe</b>, wspomagamy praktykę <b>zarządzania przedsiębiorstwem</b>, przedstawiamy rozwiązania problemów zawodowych, tłumaczymy <b>zawiłości prawa</b> z różnych obszarów. Szczególną wagę przywiązujemy do <b>kompetencji i praktycznych doświadczeń</b> współpracujących z nami trenerów i wykładowców.</p>
                 <a href="courses_open.html" class="btn btn-primary">Aktualne szkolenia otwarte</a>
             </div>
             <div class="col-lg-6 image">
-                <img src="http://via.placeholder.com/472x314/ddd/000000" alt="" />
+                <a href="#">
+                    <img src="http://via.placeholder.com/472x314/ddd/000000" alt="" />
+                </a>
             </div>
         </div>
         <div class="row is-even">
             <div class="col-lg-6 data">
                 <div class="header">
-                    <h2 class="header-title header-title--section"><span>Szkolenia zamknięte</span></h2>
+                    <h2 class="header-title header-title--section"><a href="#"><span>Szkolenia zamknięte</span></a></h2>
                 </div>
                 <p>Nasz zespół proponuje <b>szkolenia zamknięte</b> – formy ściśle dopasowane do kultury organizacyjnej i potrzeb Państwa przedsiębiorstw. Aby stworzyć szkolenie idealnie dopasowane do profilu firmy współpracujemy ściśle ze zleceniodawcą – tak na etapie <b>definiowania potrzeb</b>, jak i <b>oceny efektywności szkolenia</b>. Poprzez nasze przywiązanie do <b>praktycznego charakteru szkoleń</b> dedykowanych wspomagamy realizację Państwa celów w zakresie <b>rozwoju zawodowego kadr</b> zarządzających i pracowników.</p>
                 <a href="#" class="btn btn-primary">Pobierz katalog szkoleń zamkniętych</a>
             </div>
             <div class="col-lg-6 image">
-                <img src="http://via.placeholder.com/472x314/ddd/000000" alt="" />
+                <a href="#">
+                    <img src="http://via.placeholder.com/472x314/ddd/000000" alt="" />
+                </a>
             </div>
         </div>
         <div class="row is-odd">
             <div class="col-lg-6 data">
                 <div class="header">
-                    <h2 class="header-title header-title--section"><span>Wydawnictwo</span></h2>
+                    <h2 class="header-title header-title--section"><a href="#"><span>Wydawnictwo</span></a></h2>
                 </div>
                 <p>Rozwijamy program wydawniczy, który tak poprzez <b>media drukowane, jak i elektroniczne</b> ma wspierać i inspirować profesjonalistów. Obok znaczących pozycji z zakresu <b>literatury biznesowej</b> chcemy oferować także publikacje i <b>serwisy informacyjne</b> wspierające na co dzień ludzi podejmujących decyzje w przedsiębiorstwach i instytucjach publicznych.</p>
                 <a href="courses_open.html" class="btn btn-primary">Zobacz publikacje</a>
             </div>
             <div class="col-lg-6 image">
-                <img src="http://via.placeholder.com/472x314/ddd/000000" alt="" />
+                <a href="#">
+                    <img src="http://via.placeholder.com/472x314/ddd/000000" alt="" />
+                </a>
             </div>
         </div>
     </div>    
