--- a/courses_closed.html
+++ b/courses_closed.html
@@ -77,11 +77,13 @@
             <div class="col-lg-12 itembox">
                 <div class="col-lg-4 itembox-image-hld">
                     <span class="label label-itembox">szkolenie zamknięte</span>
-                    <img src="https://via.placeholder.com/380x285/ddd/000.png" alt="" />
+                    <a href="courses_closed_details.html">
+                        <img src="https://via.placeholder.com/380x285/ddd/000.png" alt="" />
+                    </a>
                 </div>
                 <div class="col-lg-8 itembox-data">
                     <div class="itembox-header">
-                        <h2 class="itembox-header-title">Ocena okresowa pracowników</h2>
+                        <h2 class="itembox-header-title"><a href="courses_closed_details.html">Ocena okresowa pracowników</a></h2>
                         <h3 class="itembox-header-subtitle">Praktyczne narzędzie w zarządzaniu zasobami ludzkimi</h3>
                     </div>
                     <div class="itembox-body">
@@ -102,11 +104,13 @@
             <div class="col-lg-12 itembox">
                 <div class="col-lg-4 itembox-image-hld">
                     <span class="label label-itembox">szkolenie zamknięte</span>
-                    <img src="https://via.placeholder.com/380x285/ddd/000.png" alt="" />
+                    <a href="courses_closed_details.html">
+                        <img src="https://via.placeholder.com/380x285/ddd/000.png" alt="" />
+                    </a>
                 </div>
                 <div class="col-lg-8 itembox-data">
                     <div class="itembox-header">
-                        <h2 class="itembox-header-title">Współpraca gospodarcza z partnerem zagranicznym</h2>
+                        <h2 class="itembox-header-title"><a href="courses_closed_details.html">Współpraca gospodarcza z partnerem zagranicznym</a></h2>
                         <h3 class="itembox-header-subtitle">Zagadnienia praktyczne, przegląd orzecznictwa, odpowiedzi na najważniejsze pytania</h3>
                     </div>
                     <div class="itembox-body">
@@ -127,11 +131,13 @@
             <div class="col-lg-12 itembox">
                 <div class="col-lg-4 itembox-image-hld">
                     <span class="label label-itembox">szkolenie zamknięte</span>
-                    <img src="https://via.placeholder.com/380x285/ddd/000.png" alt="" />
+                    <a href="courses_closed_details.html">
+                        <img src="https://via.placeholder.com/380x285/ddd/000.png" alt="" />
+                    </a>
                 </div>
                 <div class="col-lg-8 itembox-data">
                     <div class="itembox-header">
-                        <h2 class="itembox-header-title">Ocena okresowa pracowników</h2>
+                        <h2 class="itembox-header-title"><a href="courses_closed_details.html">Ocena okresowa pracowników</a></h2>
                         <h3 class="itembox-header-subtitle">Praktyczne narzędzie w zarządzaniu zasobami ludzkimi</h3>
                     </div>
                     <div class="itembox-body">
@@ -152,11 +158,13 @@
             <div class="col-lg-12 itembox">
                 <div class="col-lg-4 itembox-image-hld">
                     <span class="label label-itembox">szkolenie zamknięte</span>
-                    <img src="https://via.placeholder.com/380x285/ddd/000.png" alt="" />
+                    <a href="courses_closed_details.html">
+                        <img src="https://via.placeholder.com/380x285/ddd/000.png" alt="" />
+                    </a>
                 </div>
                 <div class="col-lg-8 itembox-data">
                     <div class="itembox-header">
-                        <h2 class="itembox-header-title">Współpraca gospodarcza z partnerem zagranicznym</h2>
+                        <h2 class="itembox-header-title"><a href="courses_closed_details.html">Współpraca gospodarcza z partnerem zagranicznym</a></h2>
                         <h3 class="itembox-header-subtitle">Zagadnienia praktyczne, przegląd orzecznictwa, odpowiedzi na najważniejsze pytania</h3>
                     </div>
                     <div class="itembox-body">
@@ -177,11 +185,13 @@
             <div class="col-lg-12 itembox">
                 <div class="col-lg-4 itembox-image-hld">
                     <span class="label label-itembox">szkolenie zamknięte</span>
-                    <img src="https://via.placeholder.com/380x285/ddd/000.png" alt="" />
+                    <a href="courses_closed_details.html">
+                        <img src="https://via.placeholder.com/380x285/ddd/000.png" alt="" />
+                    </a>
                 </div>
                 <div class="col-lg-8 itembox-data">
                     <div class="itembox-header">
-                        <h2 class="itembox-header-title">Ocena okresowa pracowników</h2>
+                        <h2 class="itembox-header-title"><a href="courses_closed_details.html">Ocena okresowa pracowników</a></h2>
                         <h3 class="itembox-header-subtitle">Praktyczne narzędzie w zarządzaniu zasobami ludzkimi</h3>
                     </div>
                     <div class="itembox-body">
