--- a/courses_closed_details.html
+++ b/courses_closed_details.html
@@ -62,7 +62,7 @@
                 </div>
                 <div class="col-sm-8 col-lg-8 contentbox-header">
                     <div class="contentbox-title-hld">
-                        <h1 class="title">Ocena okresowa pracowników</h1>
+                        <h1 class="title"><a href="#">Ocena okresowa pracowników</a></h1>
                         <h2 class="subtitle">Praktyczne narzędzie w zarządzaniu zasobami ludzkimi</h2>
                     </div>
                     <div class="event-details">
