--- a/courses_open.html
+++ b/courses_open.html
@@ -99,7 +99,7 @@
                 </div>
                 <div class="col-lg-8 itembox-data">
                     <div class="itembox-header">
-                        <h2 class="itembox-header-title"><a href="#">Umowa zlecenia - przegląd ryzyk formalno-prawnych</a></h2>
+                        <h2 class="itembox-header-title"><a href="courses_open_details.html">Umowa zlecenia - przegląd ryzyk formalno-prawnych</a></h2>
                         <h3 class="itembox-header-subtitle">Zagadnienia praktyczne, przegląd orzecznictwa, odpowiedzi na najważniejsze pytania</h3>
                     </div>
                     <div class="itembox-body">
@@ -109,9 +109,9 @@
                         <div class="col-lg-5 itembox-action itembox-action--line">
                             <p><b>Miejsce i termin:</b>
                                 <i class="icon icon--calendar"></i>
-                                <a href="#" class="itembox-action-item">Poznań, 22.08.2019</a>
-                                <a href="#" class="itembox-action-item">Warszawa, 22-29.08.2019</a>
-                                <a href="#" class="itembox-action-item">Gdańsk, 4.09.2019</a>
+                                <a href="courses_open_details.html" class="itembox-action-item">Poznań, 22.08.2019</a>
+                                <a href="courses_open_details.html" class="itembox-action-item">Warszawa, 22-29.08.2019</a>
+                                <a href="courses_open_details.html" class="itembox-action-item">Gdańsk, 4.09.2019</a>
                             </p>
                             <a href="courses_open_details.html" class="btn btn-border">Szczegóły</a>
                         </div>
@@ -139,7 +139,7 @@
                 </div>
                 <div class="col-lg-8 itembox-data">
                     <div class="itembox-header">
-                        <h2 class="itembox-header-title">5. Forum Nowoczesnego Controllingu</h2>
+                        <h2 class="itembox-header-title"><a href="courses_open_details.html">5. Forum Nowoczesnego Controllingu</a></h2>
                         <h3 class="itembox-header-subtitle">Skuteczny controlling - rentowne przedsiębiorstwo. Koszty - oszczędności - optymalizacje</h3>
                     </div>
                     <div class="itembox-body">
@@ -149,7 +149,7 @@
                         <div class="col-lg-5 itembox-action itembox-action--line">
                             <p><b>Miejsce i termin:</b>
                                 <i class="icon icon--calendar"></i>
-                                <a href="#" class="itembox-action-item">Cała Polska <small>(szkolenie on-line)</small> 30.08.2019-20.09.2019</a>
+                                <a href="courses_open_details.html" class="itembox-action-item">Cała Polska <small>(szkolenie on-line)</small> 30.08.2019-20.09.2019</a>
                             </p>
                             <a href="courses_open_details.html" class="btn btn-border">Szczegóły</a>
                         </div>
@@ -166,7 +166,7 @@
                 </div>
                 <div class="col-lg-8 itembox-data">
                     <div class="itembox-header">
-                        <h2 class="itembox-header-title">Umowa zlecenia - przegląd ryzyk formalno-prawnych</h2>
+                        <h2 class="itembox-header-title"><a href="courses_open_details.html">Umowa zlecenia - przegląd ryzyk formalno-prawnych</a></h2>
                         <h3 class="itembox-header-subtitle">Zagadnienia praktyczne, przegląd orzecznictwa, odpowiedzi na najważniejsze pytania</h3>
                     </div>
                     <div class="itembox-body">
@@ -176,9 +176,9 @@
                         <div class="col-lg-5 itembox-action itembox-action--line">
                             <p><b>Miejsce i termin:</b>
                                 <i class="icon icon--calendar"></i>
-                                <a href="#" class="itembox-action-item">Poznań, 22.08.2019</a>
-                                <a href="#" class="itembox-action-item">Warszawa, 22-29.08.2019</a>
-                                <a href="#" class="itembox-action-item">Gdańsk, 4.09.2019</a>
+                                <a href="courses_open_details.html" class="itembox-action-item">Poznań, 22.08.2019</a>
+                                <a href="courses_open_details.html" class="itembox-action-item">Warszawa, 22-29.08.2019</a>
+                                <a href="courses_open_details.html" class="itembox-action-item">Gdańsk, 4.09.2019</a>
                             </p>
                             <a href="courses_open_details.html" class="btn btn-border">Szczegóły</a>
                         </div>
@@ -195,7 +195,7 @@
                 </div>
                 <div class="col-lg-8 itembox-data">
                     <div class="itembox-header">
-                        <h2 class="itembox-header-title">5. Forum Nowoczesnego Controllingu</h2>
+                        <h2 class="itembox-header-title"><a href="courses_open_details.html">5. Forum Nowoczesnego Controllingu</a></h2>
                         <h3 class="itembox-header-subtitle">Skuteczny controlling - rentowne przedsiębiorstwo. Koszty - oszczędności - optymalizacje</h3>
                     </div>
                     <div class="itembox-body">
@@ -205,7 +205,7 @@
                         <div class="col-lg-5 itembox-action itembox-action--line">
                             <p><b>Miejsce i termin:</b>
                                 <i class="icon icon--calendar"></i>
-                                <a href="#" class="itembox-action-item">Cała Polska <small>(szkolenie on-line)</small> 30.08.2019-20.09.2019</a>
+                                <a href="courses_open_details.html" class="itembox-action-item">Cała Polska <small>(szkolenie on-line)</small> 30.08.2019-20.09.2019</a>
                             </p>
                             <a href="courses_open_details.html" class="btn btn-border">Szczegóły</a>
                         </div>
