--- a/courses_open_details.html
+++ b/courses_open_details.html
@@ -62,7 +62,7 @@
                 </div>
                 <div class="col-sm-8 col-lg-8 contentbox-header">
                     <div class="contentbox-title-hld">
-                        <h1 class="title">5. Forum Nowoczesnego Controllingu</h1>
+                        <h1 class="title"><a href="#">5. Forum Nowoczesnego Controllingu</a></h1>
                         <h2 class="subtitle">Skuteczny controlling - rentowne przedsiębiorstwo. Koszty - oszczędności - optymalizacje</h2>
                     </div>
                     <div class="event-details">
