--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             <div class="promotional-slider col-7">
                 <ul class="js-slick-items slick-slider promotional-slider-inner">
                     <li class="item">
-                        <a href="#">
+                        <a href="courses_open_details.html">
                             <div class="item-image">
                                 <img src="http://via.placeholder.com/1200x900/333/000000?text=1-1200x900" alt="" />
                             </div>
@@ -70,7 +70,7 @@
                         </a>
                     </li>
                     <li class="item">
-                        <a href="#">
+                        <a href="courses_open_details.html">
                             <div class="item-image">
                                 <img src="http://via.placeholder.com/1200x900/DDD/000000?text=2-1200x900" alt="" />
                             </div>
@@ -82,7 +82,7 @@
                         </a>
                     </li>
                     <li class="item">
-                        <a href="#">
+                        <a href="courses_open_details.html">
                             <div class="item-image">
                                 <img src="http://via.placeholder.com/1200x900/ccc/000000?text=3-1200x900" alt="" />
                             </div>
@@ -114,7 +114,7 @@
             <div class="promotional-text col-5">
                 <div class="col-md-8 col-lg-9 col-xl-7">
                     <div class="header">
-                        <h2 class="header-title header-title--promotional"><span><a href="#">Szkolenia zamknięte</a></span></h2>
+                        <h2 class="header-title header-title--promotional"><span><a href="courses_closed.html">Szkolenia zamknięte</a></span></h2>
                     </div>
                     <p>Explanator proponuje <b>szkolenia zamknięte</b> – formy ściśle dopasowane do kultury organizacyjnej i potrzeb Państwa przedsiębiorstw. Aby stworzyć szkolenie idealnie dopasowane do profilu firmy współpracujemy ściśle ze zleceniodawcą – tak na etapie <b>definiowania potrzeb</b>, jak i <b>oceny efektywności szkolenia</b>. Poprzez nasze przywiązanie do <b>praktycznego charakteru szkoleń</b> „in company” wspomagamy realizację Państwa celów w zakresie <b>rozwoju zawodowego</b> kadr zarządzających i pracowników.</p>
                     <a href="#" class="btn btn-primary pull-right">Zobacz więcej</a>
@@ -133,11 +133,13 @@
             <div class="col-lg-12 itembox">
                 <div class="col-lg-4 itembox-image-hld">
                     <span class="label label-itembox">forum</span>
-                    <img src="https://via.placeholder.com/380x285/ddd/000.png" alt="" />
+                    <a href="courses_open_details.html">
+                        <img src="https://via.placeholder.com/380x285/ddd/000.png" alt="" />
+                    </a>
                 </div>
                 <div class="col-lg-8 itembox-data">
                     <div class="itembox-header">
-                        <h2 class="itembox-header-title">5. Forum Nowoczesnego Controllingu</h2>
+                        <h2 class="itembox-header-title"><a href="courses_open_details.html">5. Forum Nowoczesnego Controllingu</a></h2>
                         <h3 class="itembox-header-subtitle">Skuteczny controlling - rentowne przedsiębiorstwo. Koszty - oszczędności - optymalizacje</h3>
                     </div>
                     <div class="itembox-body">
@@ -147,9 +149,9 @@
                         <div class="col-lg-5 itembox-action itembox-action--line">
                             <p><b>Miejsce i termin:</b>
                                 <i class="icon icon--calendar"></i>
-                                <a href="#" class="itembox-action-item">Cała Polska <small>(szkolenie on-line)</small> 30.08.2019-20.09.2019</a>
+                                <a href="courses_open_details.html" class="itembox-action-item">Cała Polska <small>(szkolenie on-line)</small> 30.08.2019-20.09.2019</a>
                             </p>
-                            <a href="courses_details.html" class="btn btn-border">Szczegóły</a>
+                            <a href="courses_open_details.html" class="btn btn-border">Szczegóły</a>
                         </div>
 
                     </div>
@@ -158,11 +160,13 @@
             <div class="col-lg-12 itembox">
                 <div class="col-lg-4 itembox-image-hld">
                     <span class="label label-itembox">e-kurs mailowy</span>
-                    <img src="https://via.placeholder.com/380x285/ddd/000.png" alt="" />
+                    <a href="courses_open_details.html">
+                        <img src="https://via.placeholder.com/380x285/ddd/000.png" alt="" />
+                    </a>
                 </div>
                 <div class="col-lg-8 itembox-data">
                     <div class="itembox-header">
-                        <h2 class="itembox-header-title">Umowa zlecenia - przegląd ryzyk formalno-prawnych</h2>
+                        <h2 class="itembox-header-title"><a href="courses_open_details.html">Umowa zlecenia - przegląd ryzyk formalno-prawnych</a></h2>
                         <h3 class="itembox-header-subtitle">Zagadnienia praktyczne, przegląd orzecznictwa, odpowiedzi na najważniejsze pytania</h3>
                     </div>
                     <div class="itembox-body">
@@ -172,11 +176,11 @@
                         <div class="col-lg-5 itembox-action itembox-action--line">
                             <p><b>Miejsce i termin:</b>
                                 <i class="icon icon--calendar"></i>
-                                <a href="#" class="itembox-action-item">Poznań, 22.08.2019</a>
-                                <a href="#" class="itembox-action-item">Warszawa, 22-29.08.2019</a>
-                                <a href="#" class="itembox-action-item">Gdańsk, 4.09.2019</a>
+                                <a href="courses_open_details.html" class="itembox-action-item">Poznań, 22.08.2019</a>
+                                <a href="courses_open_details.html" class="itembox-action-item">Warszawa, 22-29.08.2019</a>
+                                <a href="courses_open_details.html" class="itembox-action-item">Gdańsk, 4.09.2019</a>
                             </p>
-                            <a href="courses_details.html" class="btn btn-border">Szczegóły</a>
+                            <a href="courses_open_details.html" class="btn btn-border">Szczegóły</a>
                         </div>
 
                     </div>
@@ -216,19 +220,19 @@
             <div class="col-lg-6 itembox">
                 <div class="col-lg-4 itembox-image-hld">
                     <span class="label label-itembox">forum</span>
-                    <a href="courses_details.html">
+                    <a href="courses_open_details.html">
                         <img src="https://via.placeholder.com/285x380/ddd/000.png" alt="" />
                     </a>
                 </div>
                 <div class="col-lg-8 itembox-data">
                     <div class="itembox-header">
-                        <h2 class="itembox-header-title">5. Forum Nowoczesnego Controllingu</h2>
+                        <h2 class="itembox-header-title"><a href="courses_open_details.html">5. Forum Nowoczesnego Controllingu</a></h2>
                         <h3 class="itembox-header-subtitle">Skuteczny controlling - rentowne przedsiębiorstwo. Koszty - oszczędności - optymalizacje</h3>
                     </div>
                     <div class="itembox-body">
                         <div class="itembox-action">
                             <p>Wykładowcy: Zespół ekspertów</p>
-                            <a href="courses_details.html" class="btn btn-border">Warszawa, 24-25.10.2019</a>
+                            <a href="courses_open_details.html" class="btn btn-border">Warszawa, 24-25.10.2019</a>
                         </div>
 
                     </div>
@@ -237,19 +241,19 @@
             <div class="col-lg-6 itembox">
                 <div class="col-lg-4 itembox-image-hld">
                     <span class="label label-itembox">e-kurs mailowy</span>
-                    <a href="courses_details.html">
+                    <a href="courses_open_details.html">
                         <img src="https://via.placeholder.com/285x380/ddd/000.png" alt="" />
                     </a>
                 </div>
                 <div class="col-lg-8 itembox-data">
                     <div class="itembox-header">
-                        <h2 class="itembox-header-title">Umowa zlecenia - przegląd ryzyk formalno-prawnych</h2>
+                        <h2 class="itembox-header-title"><a href="courses_open_details.html">Umowa zlecenia - przegląd ryzyk formalno-prawnych</a></h2>
                         <h3 class="itembox-header-subtitle">Zagadnienia praktyczne, przegląd orzecznictwa, odpowiedzi na najważniejsze pytania</h3>
                     </div>
                     <div class="itembox-body">
                         <div class="itembox-action">
                             <p>Wykładowcy: Zespół ekspertów</p>
-                            <a href="courses_details.html" class="btn btn-border">Szczegóły</a>
+                            <a href="courses_open_details.html" class="btn btn-border">Szczegóły</a>
                         </div>
 
                     </div>
@@ -258,19 +262,19 @@
             <div class="col-lg-6 itembox">
                 <div class="col-lg-4 itembox-image-hld">
                     <span class="label label-itembox">forum</span>
-                    <a href="courses_details.html">
+                    <a href="courses_open_details.html">
                         <img src="https://via.placeholder.com/285x380/ddd/000.png" alt="" />
                     </a>
                 </div>
                 <div class="col-lg-8 itembox-data">
                     <div class="itembox-header">
-                        <h2 class="itembox-header-title">5. Forum Nowoczesnego Controllingu</h2>
+                        <h2 class="itembox-header-title"><a href="courses_open_details.html">5. Forum Nowoczesnego Controllingu</a></h2>
                         <h3 class="itembox-header-subtitle">Skuteczny controlling - rentowne przedsiębiorstwo. Koszty - oszczędności - optymalizacje</h3>
                     </div>
                     <div class="itembox-body">
                         <div class="itembox-action">
                             <p>Wykładowcy: Zespół ekspertów</p>
-                            <a href="courses_details.html" class="btn btn-border">Warszawa, 24-25.10.2019</a>
+                            <a href="courses_open_details.html" class="btn btn-border">Warszawa, 24-25.10.2019</a>
                         </div>
 
                     </div>
@@ -285,13 +289,13 @@
                 </div>
                 <div class="col-lg-8 itembox-data">
                     <div class="itembox-header">
-                        <h2 class="itembox-header-title">Umowa zlecenia - przegląd ryzyk formalno-prawnych</h2>
+                        <h2 class="itembox-header-title"><a href="courses_open_details.html">Umowa zlecenia - przegląd ryzyk formalno-prawnych</a></h2>
                         <h3 class="itembox-header-subtitle">Zagadnienia praktyczne, przegląd orzecznictwa, odpowiedzi na najważniejsze pytania</h3>
                     </div>
                     <div class="itembox-body">
                         <div class="itembox-action">
                             <p>Wykładowcy: Zespół ekspertów</p>
-                            <a href="courses_details.html" class="btn btn-border">Szczegóły</a>
+                            <a href="courses_open_details.html" class="btn btn-border">Szczegóły</a>
                         </div>
                     </div>
                 </div>
