--- a/publications.html
+++ b/publications.html
@@ -66,11 +66,13 @@
             <div class="col-lg-12 itembox">
                 <div class="col-lg-4 itembox-image-hld">
                     <span class="label label-itembox">książka</span>
-                    <img src="https://via.placeholder.com/380x285/ddd/000.png" alt="" />
+                    <a href="publications_details.html">
+                        <img src="https://via.placeholder.com/380x285/ddd/000.png" alt="" />
+                    </a>
                 </div>
                 <div class="col-lg-8 itembox-data">
                     <div class="itembox-header">
-                        <h2 class="itembox-header-title">Kurs wiedzy o winie</h2>
+                        <h2 class="itembox-header-title"><a href="publications_details.html">Kurs wiedzy o winie</a></h2>
                         <h3 class="itembox-header-subtitle">Windows of the World, 4. wydanie polskie. zaktualizowane i rozszerzone</h3>
                     </div>
                     <div class="itembox-body">
@@ -90,11 +92,13 @@
             <div class="col-lg-12 itembox">
                 <div class="col-lg-4 itembox-image-hld">
                     <span class="label label-itembox">aktualizowany poradnik wymiennokartkowy</span>
-                    <img src="https://via.placeholder.com/380x285/ddd/000.png" alt="" />
+                    <a href="publications_details.html">
+                        <img src="https://via.placeholder.com/380x285/ddd/000.png" alt="" />
+                    </a>
                 </div>
                 <div class="col-lg-8 itembox-data">
                     <div class="itembox-header">
-                        <h2 class="itembox-header-title">Kodeks Spółek Handlowych i odpowiedzialność prawna kadry zarządzającej</h2>
+                        <h2 class="itembox-header-title"><a href="publications_details.html">Kodeks Spółek Handlowych i odpowiedzialność prawna kadry zarządzającej</a></h2>
                         <h3 class="itembox-header-subtitle">Praktyczne rozwiązania i rekomendacje, interpretacje, wykładnie orzecznictwo oraz wzorcowe formularze i dokumenty</h3>
                     </div>
                     <div class="itembox-body">
@@ -114,11 +118,13 @@
             <div class="col-lg-12 itembox">
                 <div class="col-lg-4 itembox-image-hld">
                     <span class="label label-itembox">aktualizowany poradnik wymiennokartkowy</span>
-                    <img src="https://via.placeholder.com/380x285/ddd/000.png" alt="" />
+                    <a href="publications_details.html">
+                        <img src="https://via.placeholder.com/380x285/ddd/000.png" alt="" />
+                    </a>
                 </div>
                 <div class="col-lg-8 itembox-data">
                     <div class="itembox-header">
-                        <h2 class="itembox-header-title">Kodeks Spółek Handlowych i odpowiedzialność prawna kadry zarządzającej</h2>
+                        <h2 class="itembox-header-title"><a href="publications_details.html">Kodeks Spółek Handlowych i odpowiedzialność prawna kadry zarządzającej</a></h2>
                         <h3 class="itembox-header-subtitle">Praktyczne rozwiązania i rekomendacje, interpretacje, wykładnie orzecznictwo oraz wzorcowe formularze i dokumenty</h3>
                     </div>
                     <div class="itembox-body">
@@ -138,16 +144,18 @@
             <div class="col-lg-12 itembox">
                 <div class="col-lg-4 itembox-image-hld">
                     <span class="label label-itembox">czasopismo specjalistyczne</span>
-                    <img src="https://via.placeholder.com/380x285/ddd/000.png" alt="" />
+                    <a href="publications_details.html">
+                        <img src="https://via.placeholder.com/380x285/ddd/000.png" alt="" />
+                    </a>
                 </div>
                 <div class="col-lg-8 itembox-data">
                     <div class="itembox-header">
-                        <h3 class="itembox-header-title">Magazynowanie i Produkcja</h3>
+                        <h2 class="itembox-header-title"><a href="publications_details.html">Magazynowanie i Produkcja</a></h2>
                     </div>
                     <div class="itembox-body">
                         <div class="col-lg-7 itembox-content">
                             <p>Magazynowanie i Produkcja to nowe czasopismo, które podejmuje problematykę magazynowania, produkcji, controllingu i logistyki. Przekazujemy kompleksową wiedzę i rozwiązania stosowane w najlepszych firmach w kraju i za granicą.</p>
-                            <p>Strona WWW magazynu --> https://www.magazyn-produkcja.pl/</p>
+                            <p>Strona WWW magazynu --> <a href="https://www.magazyn-produkcja.pl/">https://www.magazyn-produkcja.pl/</a></p>
                         </div>
                         <div class="col-lg-5 itembox-action itembox-action--line">
                             <p class="price price--action">Cena: <span class="price-value">193,32</span> <span class="price-currency">zł</span> <span class="price-tax">netto</span></p>
@@ -162,11 +170,13 @@
             <div class="col-lg-12 itembox">
                 <div class="col-lg-4 itembox-image-hld">
                     <span class="label label-itembox">czasopismo specjalistyczne</span>
-                    <img src="https://via.placeholder.com/380x285/ddd/000.png" alt="" />
+                    <a href="publications_details.html">
+                        <img src="https://via.placeholder.com/380x285/ddd/000.png" alt="" />
+                    </a>
                 </div>
                 <div class="col-lg-8 itembox-data">
                     <div class="itembox-header">
-                        <h2 class="itembox-header-title">Sell it in English</h2>
+                        <h2 class="itembox-header-title"><a href="publications_details.html">Sell it in English</a></h2>
                         <h3 class="itembox-header-subtitle">Praktyczne rozwiązania i rekomendacje, interpretacje, wykładnie orzecznictwo oraz wzorcowe formularze i dokumenty</h3>
                     </div>
                     <div class="itembox-body">
