--- a/publications_details.html
+++ b/publications_details.html
@@ -62,7 +62,7 @@
                 </div>
                 <div class="col-sm-8 col-lg-8 contentbox-header">
                     <div class="contentbox-title-hld">
-                        <h1 class="title">Kodeks Spółek Handlowych i odpowiedzialność prawna kadry zarządzającej</h1>
+                        <h1 class="title"><a href="#">Kodeks Spółek Handlowych i odpowiedzialność prawna kadry zarządzającej</a></h1>
                         <h2 class="subtitle">Praktyczne rozwiązania i rekomendacje, interpretacje, wykładnie orzecznictwo oraz wzorcowe formularze i dokumenty</h2>
                     </div>
                 </div>
